makes/foss/units/integrates/back/deploy/prod/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-master
  namespace: production
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: integrates-master
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 10%
  template:
    metadata:
      labels:
        app: integrates-master
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      nodeSelector:
        worker_group: production
      containers:
        - name: integrates
          image: ghcr.io/fluidattacks/makes:22.04
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m f@${CI_COMMIT_SHA} /integrates/back/deploy/probes/liveness;
              m f@${CI_COMMIT_SHA} /integrates/back/deploy/probes/readiness;
              m f@${CI_COMMIT_SHA} /integrates/back prod
          resources:
            # Ensure your request and limit fits in the node:
            #   kubectl get node --selector=worker_group=production
            #   kubectl describe node <node>
            #
            # You can have 1 pod per node, or 2, or 3, etc..
            #
            # Debug if pods were actually able to use the node:
            #   kubectl get pod -n production
            #   kubectl describe pod -n production <pod>
            requests:
              cpu: 1000m
              memory: 6000Mi
            limits:
              cpu: 2000m
              memory: 7800Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-readiness/bin/*
                  aws_login_prod
                  prod_integrates
                  FluidIntegrates http://localhost:8001
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-liveness/bin/*
                  aws_login_prod
                  prod_integrates
                  FluidIntegrates http://localhost:8001
                  https://app.fluidattacks.com
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
